--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,11 @@
         "fedemotta/yii2-cronjob": "*",
         "dmstr/yii2-adminlte-asset": "^2.1",
         "kartik-v/yii2-widget-datepicker": "@dev",
-        "phpoffice/phpexcel": "^1.8"
+        "phpoffice/phpexcel": "^1.8",
+        "scotthuangzl/yii2-export2excel": "dev-master",
+        "yiiplus/yii2-websocket": "^1.0.0",
+        "consik/yii2-websocket": "^1.0",
+        "mikemadisonweb/yii2-rabbitmq": "^2.5"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
@@ -33,7 +37,8 @@
         "codeception/module-yii2": "^1.0",
         "codeception/module-filesystem": "^1.0",
         "codeception/verify": "~0.5.0 || ~1.1.0",
-        "symfony/browser-kit": ">=2.7 <=4.2.4"
+        "symfony/browser-kit": ">=2.7 <=4.2.4",
+        "phpunit/phpunit": "~8.5.28"
     },
     "config": {
         "process-timeout": 1800,
